     in user interface
   * Fixed bug #13295: made enemy_units formula return only those units which
     are not incapacitated (for example, it now ignores stoned units )
 * Editor2:
   * New feature: exporting of selection coordinates to system clipboard
 * Graphics:
   * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman,
   Ogre/Young Ogre, Trapper
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
     Czech, German, Finnish, Hebrew, Italian, Polish, Russian, Slovak, Turkish
 * Multiplayer server:
   * Implemented automatic saving of game replays.
 * Miscellaneous and bugfixes:
   * Fixed an infinite loop issue when no music tracks could be loaded
   * Fixed compilation with -D_GLIBCXX_PARALLEL
   * Fixed handling of floating-point WML constants on localized Windows
     (impacts "submerge" animations and AI settings)

Version 1.6a:
 * User interface:
   * Remove a no longer valid assert (bug #13217)
   * Make sure the dialog always uses the full map area width
 * Multiplayer and AI:
   * Fixed bug #13222: Do not use the FormulaAI by default since it could lead
     to the AI doing nothing
   * Fixed bug #13218: infinite loop in the AI if it persistently tries to move
     unit to occupied square
   * Moved FormulaAI related debug output into the info log level

Version 1.6:
 * Campaigns:
   * Under the Burning Suns:
     * All portraits now have a transparent background (bug #13135)
 * Graphics:
   * New or updated unit graphics for the Mermaid Priestess and Enchantress
     unit lines
 * Language and i18n:
   * updated translations: Finnish, French, German, Lithuanian, Polish,
     Portuguese (Brazil), Russian, Slovak, Spanish
 * User interface:
   * Grey game titles out when we're missing the era
   * Fix a dialog size problem returning invalid sizes (bug #13203)
 * WML Engine:
   * Increase the map size limit to 1000 by 1000