@@ -1234,7 +1234,8 @@ void game::save_replay() {
 	<< "[replay]\n" << replay_commands << "[/replay]\n"
 	<< "[replay_start]\n" << level_.output() << "[/replay_start]\n";
 
-	simple_wml::document replay(replay_data.str().c_str(), simple_wml::INIT_STATIC);
+	std::string replay_data_str = replay_data.str();
+	simple_wml::document replay(replay_data_str.c_str(), simple_wml::INIT_STATIC);
 
 	std::string filename(name.str());
 	std::replace(filename.begin(), filename.end(), ' ', '_');
